working camera and upload

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,11 @@
 
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -47,6 +51,8 @@
         </activity>
         <!-- <activity android:name=".SampleContactsActivity"/> -->
         <activity android:name=".SampleGalleryActivity" />
+        <activity android:name=".PhotoIntentActivity" />
+
         <!-- <activity android:name=".SampleListDetailActivity"/> -->
         <activity
             android:name=".SingleStreamActivity"
