--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services:6.1.11'
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.squareup.picasso:picasso:2.3.4'
+    compile 'com.android.support:appcompat-v7:+'
+    //compile 'org.apache.httpcomponents:httpmime:4.3.3'
+    //compile 'org.apache.httpcomponents:httpclient:4.3.3'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile files('libs/apache-mime4j-0.3.jar')
+    // compile files('libs/httpcore-4.3.3.jar')
+    compile 'httpcomponents-httpcore:httpcore:4.0-alpha6'
 }
