--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -44,7 +48,6 @@
             android:name=".SampleGridViewActivity"
             android:label="@string/title_activity_sample_grid_view" >
         </activity>
-
         <activity
             android:name=".SearchActivity"
             android:label="Search" >
@@ -57,6 +60,10 @@
         <activity
             android:name=".SingleStreamActivity"
             android:label="@string/title_activity_single_stream" >
+        </activity>
+        <activity
+            android:name=".NearbyActivity"
+            android:label="@string/title_activity_nearby" >
         </activity>
     </application>
 
